Add Rd18,19 race gaptime csv

--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@ PDF</a><br />
 href="./2022/2022_Rd19_United-States-Grand-Prix_Race_race_control_message.csv">RACE:Race
 Control Message CSV</a><br />
 <a
+href="./2022/2022_Rd19_United-States-Grand-Prix_Race_gaptime.csv">RACE:gaptime
+CSV</a><br />
+<a
 href="./2022/2022_Rd19_United-States-Grand-Prix_Race_ALO_L22_vs_ALO_L14.pdf">RACE
 ALO L14 vs L22</a></p>
 <h2 data-number="1.2" id="rd18-japanese-grand-prix"><span
@@ -85,7 +88,10 @@ PDF</a><br />
 PDF</a><br />
 <a
 href="./2022/2022_Rd18_Japanese-Grand-Prix_Race_race_control_message.csv">RACE:Race
-Control Message CSV</a></p>
+Control Message CSV</a><br />
+<a
+href="./2022/2022_Rd18_Japanese-Grand-Prix_Race_gaptime.csv">RACE:gaptime
+CSV</a></p>
 <h2 data-number="1.3" id="rd17-singapore-grand-prix"><span
 class="header-section-number">1.3</span> Rd17 Singapore Grand Prix</h2>
 <p><a href="./2022/2022_Rd17_Singapore-Grand-Prix_Practice-3.pdf">FP3
