Add Rd20 FP1/FP2

--- a/index.html
+++ b/index.html
@@ -33,23 +33,40 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2022 season</a>
 <ul>
+<li><a href="#rd20-mexico-city-grand-prix"
+id="toc-rd20-mexico-city-grand-prix"><span
+class="toc-section-number">1.1</span> Rd20 Mexico City Grand
+Prix</a></li>
 <li><a href="#rd19-united-states-grand-prix"
 id="toc-rd19-united-states-grand-prix"><span
-class="toc-section-number">1.1</span> Rd19 United States Grand
+class="toc-section-number">1.2</span> Rd19 United States Grand
 Prix</a></li>
 <li><a href="#rd18-japanese-grand-prix"
 id="toc-rd18-japanese-grand-prix"><span
-class="toc-section-number">1.2</span> Rd18 Japanese Grand Prix</a></li>
+class="toc-section-number">1.3</span> Rd18 Japanese Grand Prix</a></li>
 <li><a href="#rd17-singapore-grand-prix"
 id="toc-rd17-singapore-grand-prix"><span
-class="toc-section-number">1.3</span> Rd17 Singapore Grand Prix</a></li>
+class="toc-section-number">1.4</span> Rd17 Singapore Grand Prix</a></li>
 </ul></li>
 </ul>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2022 season</h1>
-<h2 data-number="1.1" id="rd19-united-states-grand-prix"><span
-class="header-section-number">1.1</span> Rd19 United States Grand
+<h2 data-number="1.1" id="rd20-mexico-city-grand-prix"><span
+class="header-section-number">1.1</span> Rd20 Mexico City Grand
+Prix</h2>
+<p><a href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-1.pdf">FP1
+PDF</a><br />
+<a
+href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-1_race_control_message.csv">FP1:Race
+Control Message CSV</a><br />
+<a href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-2.pdf">FP2
+PDF</a><br />
+<a
+href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-2_race_control_message.csv">FP2:Race
+Control Message CSV</a></p>
+<h2 data-number="1.2" id="rd19-united-states-grand-prix"><span
+class="header-section-number">1.2</span> Rd19 United States Grand
 Prix</h2>
 <p><a
 href="./2022/2022_Rd19_United-States-Grand-Prix_Practice-1.pdf">FP1
@@ -74,8 +91,8 @@ CSV</a><br />
 <a
 href="./2022/2022_Rd19_United-States-Grand-Prix_Race_ALO_L22_vs_ALO_L14.pdf">RACE
 ALO L14 vs L22</a></p>
-<h2 data-number="1.2" id="rd18-japanese-grand-prix"><span
-class="header-section-number">1.2</span> Rd18 Japanese Grand Prix</h2>
+<h2 data-number="1.3" id="rd18-japanese-grand-prix"><span
+class="header-section-number">1.3</span> Rd18 Japanese Grand Prix</h2>
 <p><a href="./2022/2022_Rd18_Japanese-Grand-Prix_Practice-1.pdf">FP1
 PDF</a><br />
 <a href="./2022/2022_Rd18_Japanese-Grand-Prix_Practice-2.pdf">FP2
@@ -92,8 +109,8 @@ Control Message CSV</a><br />
 <a
 href="./2022/2022_Rd18_Japanese-Grand-Prix_Race_gaptime.csv">RACE:gaptime
 CSV</a></p>
-<h2 data-number="1.3" id="rd17-singapore-grand-prix"><span
-class="header-section-number">1.3</span> Rd17 Singapore Grand Prix</h2>
+<h2 data-number="1.4" id="rd17-singapore-grand-prix"><span
+class="header-section-number">1.4</span> Rd17 Singapore Grand Prix</h2>
 <p><a href="./2022/2022_Rd17_Singapore-Grand-Prix_Practice-3.pdf">FP3
 PDF</a><br />
 <a href="./2022/2022_Rd17_Singapore-Grand-Prix_Qualifying.pdf">QF
