Add 2020 Rd20 FP3/QF data

--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@ Control Message CSV</a><br />
 PDF</a><br />
 <a
 href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-2_race_control_message.csv">FP2:Race
+Control Message CSV</a><br />
+<a href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-3.pdf">FP3
+PDF</a><br />
+<a
+href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Practice-3_race_control_message.csv">FP3:Race
+Control Message CSV</a><br />
+<a href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Qualifying.pdf">QF
+PDF</a><br />
+<a
+href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Qualifying_race_control_message.csv">QF:Race
 Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd19-united-states-grand-prix"><span
 class="header-section-number">1.2</span> Rd19 United States Grand
