Add 2020 Rd20 Race data

--- a/index.html
+++ b/index.html
@@ -74,7 +74,14 @@ Control Message CSV</a><br />
 PDF</a><br />
 <a
 href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Qualifying_race_control_message.csv">QF:Race
-Control Message CSV</a></p>
+Control Message CSV</a><br />
+<a href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Race.pdf">Race
+PDF</a><br />
+<a
+href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Race_race_control_message.csv">Race:Race
+Control Message CSV</a><br />
+<a href="./2022/2022_Rd20_Mexico-City-Grand-Prix_Race_gaptime.csv">Race:
+Gap To Leader CSV</a></p>
 <h2 data-number="1.2" id="rd19-united-states-grand-prix"><span
 class="header-section-number">1.2</span> Rd19 United States Grand
 Prix</h2>
