Add 2020 Rd21 FP2 Data

--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@ Control Message CSV</a><br />
 PDF</a><br />
 <a
 href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Qualifying_race_control_message.csv">QF:Race
+Control Message CSV</a><br />
+<a href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Practice-2.pdf">FP2
+PDF</a><br />
+<a
+href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Practice-2_race_control_message.csv">FP2:Race
 Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd20-mexico-city-grand-prix"><span
 class="header-section-number">1.2</span> Rd20 Mexico City Grand
