--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@ Control Message CSV</a><br />
 PDF</a><br />
 <a
 href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Practice-2_race_control_message.csv">FP2:Race
+Control Message CSV</a><br />
+<a href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Sprint.pdf">SPRINT
+PDF</a><br />
+<a
+href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Sprint_gap-to-leader.csv">SPRINT:GapToLeader
+CSV</a><br />
+<a
+href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Sprint_race_control_message.csv">SPRINT:Race
 Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd20-mexico-city-grand-prix"><span
 class="header-section-number">1.2</span> Rd20 Mexico City Grand
