Add 2022 Rd21 Race Data

--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@ href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Sprint_gap-to-leader.csv">SPRINT:Gap
 CSV</a><br />
 <a
 href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Sprint_race_control_message.csv">SPRINT:Race
+Control Message CSV</a><br />
+<a href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Race.pdf">RACE
+PDF</a><br />
+<a
+href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Race_gap-to-leader.csv">RACE:GapToLeader
+CSV</a><br />
+<a
+href="./2022/2022_Rd21_Sao-Paulo-Grand-Prix_Race_race_control_message.csv">RACE:Race
 Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd20-mexico-city-grand-prix"><span
 class="header-section-number">1.2</span> Rd20 Mexico City Grand
