--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@ Control Message CSV</a><br />
 PDF</a><br />
 <a
 href="./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Practice-2_race_control_message.csv">FP2:Race
+Control Message CSV</a><br />
+<a href="./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Practice-3.pdf">FP3
+PDF</a><br />
+<a
+href="./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Practice-3_race_control_message.csv">FP3:Race
 Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd21-sao-paulo-grand-prix"><span
 class="header-section-number">1.2</span> Rd21 Sao Paulo Grand Prix</h2>
