Add 2022 Rd22 Race

--- a/index.html
+++ b/index.html
@@ -79,6 +79,14 @@ Control Message CSV</a><br />
 PDF</a><br />
 <a
 href="./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Qualifying_race_control_message.csv">QF:Race
+Control Message CSV</a><br />
+<a href="./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Race.pdf">RACE
+PDF</a><br />
+<a
+href="./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Race_gap-to-leader.csv">RACE:GapToLeader
+CSV</a><br />
+<a
+href="./2022/2022_Rd22_Abu-Dhabi-Grand-Prix_Race_race_control_message.csv">RACE:Race
 Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd21-sao-paulo-grand-prix"><span
 class="header-section-number">1.2</span> Rd21 Sao Paulo Grand Prix</h2>
