2023 Pre-Season Test Day2のデータを追加

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@ href="./2023/2023_Rd00_Pre-Season-Testing_Practice-1_laptime.csv">Day1
 All Laptime CSV</a><br />
 <a
 href="./2023/2023_Rd00_Pre-Season-Testing_Practice-1_race_control_message.csv">Day1
+Race Control Message CSV</a><br />
+<a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-2.pdf">Day2
+PDF</a><br />
+<a
+href="./2023/2023_Rd00_Pre-Season-Testing_Practice-2_laptime.csv">Day2
+All Laptime CSV</a><br />
+<a
+href="./2023/2023_Rd00_Pre-Season-Testing_Practice-2_race_control_message.csv">Day2
 Race Control Message CSV</a></p>
 <h1 data-number="2" id="season-1"><span
 class="header-section-number">2</span> 2022 season</h1>
