--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@ href="./2023/2023_Rd00_Pre-season-test-Day1-VER_vs_SAI_vs_ALO_vs_HAM.pdf">Day1:V
 PDF</a><br />
 <a
 href="./2023/2023_Rd00_Pre-season-test-Day1-NOR_vs_ALB_vs_ZHO.pdf">Day1:NOR_vs_ALB_vs_ZHO
-PDF</a></p>
+PDF</a><br />
+<a
+href="./2023/2023_Rd00_Pre-season-test-Day1-VER_SAI_HAM_delta.pdf">Day1:VER_SAI_HAM
+w/ delta</a></p>
 <p><a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-2.pdf">Day2
 PDF</a><br />
 <a
@@ -94,7 +97,10 @@ href="./2023/2023_Rd00_Pre-season-test-Day2-VER_vs_SAI_vs_RUS_vs_ZHO.pdf">Day2:V
 PDF</a><br />
 <a
 href="./2023/2023_Rd00_Pre-season-test-Day2-ALO_vs_DEV_vs_HUL.pdf">Day2:ALO_vs_DEV_vs_HUL
-PDF</a></p>
+PDF</a><br />
+<a
+href="./2023/2023_Rd00_Pre-season-test-Day2-VER_SAI_RUS_delta.pdf">Day2:VER_SAI_RUS
+w/ delta</a></p>
 <h1 data-number="2" id="season-1"><span
 class="header-section-number">2</span> 2022 season</h1>
 <h2 data-number="2.1" id="rd22-abu-dhabi-grand-prix"><span
