2023 Pre-Season Test Day3のデータを追加

--- a/index.html
+++ b/index.html
@@ -101,6 +101,20 @@ PDF</a><br />
 <a
 href="./2023/2023_Rd00_Pre-season-test-Day2-VER_SAI_RUS_delta.pdf">Day2:VER_SAI_RUS
 w/ delta</a></p>
+<p><a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-3.pdf">Day3
+pdf</a><br />
+<a
+href="./2023/2023_Rd00_Pre-Season-Testing_Practice-3_laptime.csv">Day3
+All Laptime CSV</a><br />
+<a
+href="./2023/2023_Rd00_Pre-Season-Testing_Practice-3_race_control_message.csv">Day3
+Race Control Message CSV</a><br />
+<a
+href="./2023/2023_Rd00_Pre-season-test-Day3-PER_HAM_LEC_delta.pdf">Day3:PER
+vs HAM vs LEC w/ delta</a><br />
+<a
+href="./2023/2023_Rd00_Pre-season-test-Day3-TSU_MAG_ALO_delta.pdf">Day3:TSU
+vs MAG vs ALO w/ delta</a></p>
 <h1 data-number="2" id="season-1"><span
 class="header-section-number">2</span> 2022 season</h1>
 <h2 data-number="2.1" id="rd22-abu-dhabi-grand-prix"><span
