Add 2023 Rd01 FP1 Data

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2023 season</a>
 <ul>
+<li><a href="#rd01-bahrain-grand-prix"
+id="toc-rd01-bahrain-grand-prix"><span
+class="toc-section-number">1.1</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test-week1"
 id="toc-pre-season-test-week1"><span
-class="toc-section-number">1.1</span> Pre-Season Test Week1</a></li>
+class="toc-section-number">1.2</span> Pre-Season Test Week1</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2022 season</a>
@@ -65,8 +68,19 @@ class="toc-section-number">2.6</span> Rd17 Singapore Grand Prix</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2023 season</h1>
-<h2 data-number="1.1" id="pre-season-test-week1"><span
-class="header-section-number">1.1</span> Pre-Season Test Week1</h2>
+<h2 data-number="1.1" id="rd01-bahrain-grand-prix"><span
+class="header-section-number">1.1</span> Rd01 Bahrain Grand Prix</h2>
+<p><a
+href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-1.pdf">FP1:Plots
+PDF</a><br />
+<a
+href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-1_race_control_message.csv">FP1:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-1_laptime.csv">FP1:All
+Laptime CSV</a></p>
+<h2 data-number="1.2" id="pre-season-test-week1"><span
+class="header-section-number">1.2</span> Pre-Season Test Week1</h2>
 <p><a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf">Day1
 PDF</a><br />
 <a
