--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-2_laptime.csv">FP2:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-3.pdf">FP3:Plots
+PDF</a><br />
+<a
+href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-3_race_control_message.csv">FP3:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-3_laptime.csv">FP3:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="pre-season-test-week1"><span
 class="header-section-number">1.2</span> Pre-Season Test Week1</h2>
 <p><a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf">Day1
