--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@ PDF</a><br />
 <a
 href="./2023/2023_Rd01_Bahrain-Grand-Prix_Qualifying_race_control_message.csv">QF:Race
 Control Message CSV</a></p>
+<p><a href="./2023/2023_Rd01_Bahrain-Grand-Prix_Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2023/2023_Rd01_Bahrain-Grand-Prix_Race_gap-to-leader.csv">R:Gap
+to Leader CSV </a><br />
+<a
+href="./2023/2023_Rd01_Bahrain-Grand-Prix_Race_race_control_message.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="pre-season-test-week1"><span
 class="header-section-number">1.2</span> Pre-Season Test Week1</h2>
 <p><a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf">Day1
