Add 2023 Rd01 R Data(Race Laptime)

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@ href="./2023/2023_Rd01_Bahrain-Grand-Prix_Race_gap-to-leader.csv">R:Gap
 to Leader CSV </a><br />
 <a
 href="./2023/2023_Rd01_Bahrain-Grand-Prix_Race_race_control_message.csv">R:Race
-Control Message CSV</a></p>
+Control Message CSV</a><br />
+<a href="./2023/2023_Rd01_Bahrain-Grand-Prix_Race_laptime.csv">R:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="pre-season-test-week1"><span
 class="header-section-number">1.2</span> Pre-Season Test Week1</h2>
 <p><a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf">Day1
