Add 2023 Rd03 FP2 Data

--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-1_laptime.csv">FP1:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-2.pdf">FP2:Plots
+PDF</a><br />
+<a
+href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-2_race_control_message.csv">FP2:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-2_laptime.csv">FP2:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd02-saudi-arabian-grand-prix"><span
 class="header-section-number">1.2</span> Rd02 Saudi Arabian Grand
 Prix</h2>
