--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-2_laptime.csv">FP2:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-3.pdf">FP3:Plots
+PDF</a><br />
+<a
+href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-3_race_control_message.csv">FP3:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-3_laptime.csv">FP3:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd02-saudi-arabian-grand-prix"><span
 class="header-section-number">1.2</span> Rd02 Saudi Arabian Grand
 Prix</h2>
