Add 2023 Rd03 Race

--- a/index.html
+++ b/index.html
@@ -114,6 +114,16 @@ Control Message CSV</a></p>
 <p><a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Qualifying_result.pdf">QF:Result
 PDF</a></p>
+<p><a href="./2023/2023_Rd03_Australian-Grand-Prix_Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2023/2023_Rd03_Australian-Grand-Prix_Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a
+href="./2023/2023_Rd03_Australian-Grand-Prix_Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a
+href="./2023/2023_Rd03_Australian-Grand-Prix_Race_race_control_message.csv">R:
+Race Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd02-saudi-arabian-grand-prix"><span
 class="header-section-number">1.2</span> Rd02 Saudi Arabian Grand
 Prix</h2>
