--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@ PDF</a><br />
 href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Qualifying_rcm.csv">QF:Race
 Control Message CSV</a><br />
 <a
-href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Qualifying_laptime.csv">Q:Race
-Control Message CSV</a></p>
+href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Qualifying_laptime.csv">QF:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd03-australian-grand-prix"><span
 class="header-section-number">1.2</span> Rd03 Australian Grand Prix</h2>
 <p><a
