Add 2023 Rd04 Sprint

--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Qualifying_laptime.csv">QF:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Sprint.pdf">Sprint:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Sprint_rcm.csv">Sprint:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Sprint_laptime.csv">Sprint:All
+Laptime CSV</a><br />
+<a
+href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Sprint_gaptime.csv">Sprint:Gaptime
+CSV</a></p>
 <h2 data-number="1.2" id="rd03-australian-grand-prix"><span
 class="header-section-number">1.2</span> Rd03 Australian Grand Prix</h2>
 <p><a
