Add 2023 Rd04 Race

--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@ Laptime CSV</a><br />
 <a
 href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Sprint_gaptime.csv">Sprint:Gaptime
 CSV</a></p>
+<p><a href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a
+href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_rcm.csv">R: Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd03-australian-grand-prix"><span
 class="header-section-number">1.2</span> Rd03 Australian Grand Prix</h2>
 <p><a
