--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-2_laptime.csv">FP2:All
 Laptime CSV</a></p>
+<p><a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-3.pdf">FP3:Plots
+PDF</a><br />
+<a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-3_rcm.csv">FP3:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-3_laptime.csv">FP3:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd05-miami-grand-prix"><span
 class="header-section-number">1.2</span> Rd05 Miami Grand Prix</h2>
 <p><a href="./2023/2023-Rd05-Miami-Grand-Prix-Practice-1.pdf">FP1:Plots
