--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd07-Spanish-Grand-Prix-Practice-2_laptime.csv">FP2:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd07-Spanish-Grand-Prix-Practice-3.pdf">FP3:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd07-Spanish-Grand-Prix-Practice-3_rcm.csv">FP3:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd07-Spanish-Grand-Prix-Practice-3_laptime.csv">FP3:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd06-monaco-grand-prix"><span
 class="header-section-number">1.2</span> Rd06 Monaco Grand Prix</h2>
 <p><a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1.pdf">FP1:Plots
