Add 2023 Rd08 Canadian GP FP3/QF

--- a/index.html
+++ b/index.html
@@ -106,6 +106,24 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd08-Canadian-Grand-Prix-Practice-2_laptime.csv">FP2:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd08-Canadian-Grand-Prix-Practice-3.pdf">FP3:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd08-Canadian-Grand-Prix-Practice-3_rcm.csv">FP3:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd08-Canadian-Grand-Prix-Practice-3_laptime.csv">FP3:All
+Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd08-Canadian-Grand-Prix-Qualifying.pdf">QF:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd08-Canadian-Grand-Prix-Qualifying_rcm.csv">QF:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd08-Canadian-Grand-Prix-Qualifying_laptime.csv">QF:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd07-spanish-grand-prix"><span
 class="header-section-number">1.2</span> Rd07 Spanish Grand Prix</h2>
 <p><a
