Add 2023 Rd15 Singapore GP FP1

--- a/index.html
+++ b/index.html
@@ -36,54 +36,57 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2023 season</a>
 <ul>
+<li><a href="#rd15-singapore-grand-prix"
+id="toc-rd15-singapore-grand-prix"><span
+class="toc-section-number">1.1</span> Rd15 Singapore Grand Prix</a></li>
 <li><a href="#rd14-italian-grand-prix"
 id="toc-rd14-italian-grand-prix"><span
-class="toc-section-number">1.1</span> Rd14 Italian Grand Prix</a></li>
+class="toc-section-number">1.2</span> Rd14 Italian Grand Prix</a></li>
 <li><a href="#rd13-dutch-grand-prix"
 id="toc-rd13-dutch-grand-prix"><span
-class="toc-section-number">1.2</span> Rd13 Dutch Grand Prix</a></li>
+class="toc-section-number">1.3</span> Rd13 Dutch Grand Prix</a></li>
 <li><a href="#rd12-belgian-grand-prix"
 id="toc-rd12-belgian-grand-prix"><span
-class="toc-section-number">1.3</span> Rd12 Belgian Grand Prix</a></li>
+class="toc-section-number">1.4</span> Rd12 Belgian Grand Prix</a></li>
 <li><a href="#rd11-hungarian-grand-prix"
 id="toc-rd11-hungarian-grand-prix"><span
-class="toc-section-number">1.4</span> Rd11 Hungarian Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd11 Hungarian Grand Prix</a></li>
 <li><a href="#rd10-british-grand-prix"
 id="toc-rd10-british-grand-prix"><span
-class="toc-section-number">1.5</span> Rd10 British Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd10 British Grand Prix</a></li>
 <li><a href="#rd09-austrian-grand-prix"
 id="toc-rd09-austrian-grand-prix"><span
-class="toc-section-number">1.6</span> Rd09 Austrian Grand Prix</a></li>
+class="toc-section-number">1.7</span> Rd09 Austrian Grand Prix</a></li>
 <li><a href="#rd08-canadian-grand-prix"
 id="toc-rd08-canadian-grand-prix"><span
-class="toc-section-number">1.7</span> Rd08 Canadian Grand Prix</a></li>
+class="toc-section-number">1.8</span> Rd08 Canadian Grand Prix</a></li>
 <li><a href="#rd07-spanish-grand-prix"
 id="toc-rd07-spanish-grand-prix"><span
-class="toc-section-number">1.8</span> Rd07 Spanish Grand Prix</a></li>
+class="toc-section-number">1.9</span> Rd07 Spanish Grand Prix</a></li>
 <li><a href="#rd06-monaco-grand-prix"
 id="toc-rd06-monaco-grand-prix"><span
-class="toc-section-number">1.9</span> Rd06 Monaco Grand Prix</a></li>
+class="toc-section-number">1.10</span> Rd06 Monaco Grand Prix</a></li>
 <li><a href="#rd05-miami-grand-prix"
 id="toc-rd05-miami-grand-prix"><span
-class="toc-section-number">1.10</span> Rd05 Miami Grand Prix</a></li>
+class="toc-section-number">1.11</span> Rd05 Miami Grand Prix</a></li>
 <li><a href="#rd04-azerbaijan-grand-prix"
 id="toc-rd04-azerbaijan-grand-prix"><span
-class="toc-section-number">1.11</span> Rd04 Azerbaijan Grand
+class="toc-section-number">1.12</span> Rd04 Azerbaijan Grand
 Prix</a></li>
 <li><a href="#rd03-australian-grand-prix"
 id="toc-rd03-australian-grand-prix"><span
-class="toc-section-number">1.12</span> Rd03 Australian Grand
+class="toc-section-number">1.13</span> Rd03 Australian Grand
 Prix</a></li>
 <li><a href="#rd02-saudi-arabian-grand-prix"
 id="toc-rd02-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.13</span> Rd02 Saudi Arabian Grand
+class="toc-section-number">1.14</span> Rd02 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd01-bahrain-grand-prix"
 id="toc-rd01-bahrain-grand-prix"><span
-class="toc-section-number">1.14</span> Rd01 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.15</span> Rd01 Bahrain Grand Prix</a></li>
 <li><a href="#pre-season-test-week1"
 id="toc-pre-season-test-week1"><span
-class="toc-section-number">1.15</span> Pre-Season Test Week1</a></li>
+class="toc-section-number">1.16</span> Pre-Season Test Week1</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2022 season</a>
@@ -113,8 +116,19 @@ class="toc-section-number">2.6</span> Rd17 Singapore Grand Prix</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2023 season</h1>
-<h2 data-number="1.1" id="rd14-italian-grand-prix"><span
-class="header-section-number">1.1</span> Rd14 Italian Grand Prix</h2>
+<h2 data-number="1.1" id="rd15-singapore-grand-prix"><span
+class="header-section-number">1.1</span> Rd15 Singapore Grand Prix</h2>
+<p><a
+href="./2023/2023-Rd15-Singapore-Grand-Prix-Practice-1.pdf">FP1:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd15-Singapore-Grand-Prix-Practice-1_rcm.csv">FP1:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd15-Singapore-Grand-Prix-Practice-1_laptime.csv">FP1:All
+Laptime CSV</a></p>
+<h2 data-number="1.2" id="rd14-italian-grand-prix"><span
+class="header-section-number">1.2</span> Rd14 Italian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd14-Italian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -157,8 +171,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd14-Italian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.2" id="rd13-dutch-grand-prix"><span
-class="header-section-number">1.2</span> Rd13 Dutch Grand Prix</h2>
+<h2 data-number="1.3" id="rd13-dutch-grand-prix"><span
+class="header-section-number">1.3</span> Rd13 Dutch Grand Prix</h2>
 <p><a href="./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -195,8 +209,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd13-Dutch-Grand-Prix-Race_rcm.csv">R: Race Control
 Message CSV</a></p>
-<h2 data-number="1.3" id="rd12-belgian-grand-prix"><span
-class="header-section-number">1.3</span> Rd12 Belgian Grand Prix</h2>
+<h2 data-number="1.4" id="rd12-belgian-grand-prix"><span
+class="header-section-number">1.4</span> Rd12 Belgian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd12-Belgian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -239,8 +253,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd12-Belgian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.4" id="rd11-hungarian-grand-prix"><span
-class="header-section-number">1.4</span> Rd11 Hungarian Grand Prix</h2>
+<h2 data-number="1.5" id="rd11-hungarian-grand-prix"><span
+class="header-section-number">1.5</span> Rd11 Hungarian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd11-Hungarian-Grand-Prix-Practice-2.pdf">FP2:Plots
 PDF</a><br />
@@ -277,8 +291,8 @@ href="./2023/2023-Rd11-Hungarian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd11-Hungarian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.5" id="rd10-british-grand-prix"><span
-class="header-section-number">1.5</span> Rd10 British Grand Prix</h2>
+<h2 data-number="1.6" id="rd10-british-grand-prix"><span
+class="header-section-number">1.6</span> Rd10 British Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd10-British-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -321,8 +335,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd10-British-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.6" id="rd09-austrian-grand-prix"><span
-class="header-section-number">1.6</span> Rd09 Austrian Grand Prix</h2>
+<h2 data-number="1.7" id="rd09-austrian-grand-prix"><span
+class="header-section-number">1.7</span> Rd09 Austrian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd09-Austrian-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -368,8 +382,8 @@ href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.7" id="rd08-canadian-grand-prix"><span
-class="header-section-number">1.7</span> Rd08 Canadian Grand Prix</h2>
+<h2 data-number="1.8" id="rd08-canadian-grand-prix"><span
+class="header-section-number">1.8</span> Rd08 Canadian Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd08-Canadian-Grand-Prix-Practice-1_rcm.csv">FP1:Race
 Control Message CSV</a></p>
@@ -409,8 +423,8 @@ href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.8" id="rd07-spanish-grand-prix"><span
-class="header-section-number">1.8</span> Rd07 Spanish Grand Prix</h2>
+<h2 data-number="1.9" id="rd07-spanish-grand-prix"><span
+class="header-section-number">1.9</span> Rd07 Spanish Grand Prix</h2>
 <p><a
 href="./2023/2023-Rd07-Spanish-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -453,8 +467,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd07-Spanish-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.9" id="rd06-monaco-grand-prix"><span
-class="header-section-number">1.9</span> Rd06 Monaco Grand Prix</h2>
+<h2 data-number="1.10" id="rd06-monaco-grand-prix"><span
+class="header-section-number">1.10</span> Rd06 Monaco Grand Prix</h2>
 <p><a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd07-Monaco-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -491,8 +505,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd07-Monaco-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.10" id="rd05-miami-grand-prix"><span
-class="header-section-number">1.10</span> Rd05 Miami Grand Prix</h2>
+<h2 data-number="1.11" id="rd05-miami-grand-prix"><span
+class="header-section-number">1.11</span> Rd05 Miami Grand Prix</h2>
 <p><a href="./2023/2023-Rd05-Miami-Grand-Prix-Practice-1.pdf">FP1:Plots
 PDF</a><br />
 <a href="./2023/2023-Rd05-Miami-Grand-Prix-Practice-1_rcm.csv">FP1:Race
@@ -529,8 +543,8 @@ LapTime CSV</a><br />
 CSV </a><br />
 <a href="./2023/2023-Rd05-Miami-Grand-Prix-Race_rcm.csv">R: Race Control
 Message CSV</a></p>
-<h2 data-number="1.11" id="rd04-azerbaijan-grand-prix"><span
-class="header-section-number">1.11</span> Rd04 Azerbaijan Grand
+<h2 data-number="1.12" id="rd04-azerbaijan-grand-prix"><span
+class="header-section-number">1.12</span> Rd04 Azerbaijan Grand
 Prix</h2>
 <p><a
 href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Practice-1.pdf">FP1:Plots
@@ -571,8 +585,8 @@ href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_gaptime.csv">R:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd04-Azerbaijan-Grand-Prix-Race_rcm.csv">R: Race
 Control Message CSV</a></p>
-<h2 data-number="1.12" id="rd03-australian-grand-prix"><span
-class="header-section-number">1.12</span> Rd03 Australian Grand
+<h2 data-number="1.13" id="rd03-australian-grand-prix"><span
+class="header-section-number">1.13</span> Rd03 Australian Grand
 Prix</h2>
 <p><a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Practice-1.pdf">FP1:Plots
@@ -620,8 +634,8 @@ CSV </a><br />
 <a
 href="./2023/2023_Rd03_Australian-Grand-Prix_Race_race_control_message.csv">R:
 Race Control Message CSV</a></p>
-<h2 data-number="1.13" id="rd02-saudi-arabian-grand-prix"><span
-class="header-section-number">1.13</span> Rd02 Saudi Arabian Grand
+<h2 data-number="1.14" id="rd02-saudi-arabian-grand-prix"><span
+class="header-section-number">1.14</span> Rd02 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Practice-1.pdf">FP1:Plots
@@ -667,8 +681,8 @@ CSV </a><br />
 <a
 href="./2023/2023_Rd02_Saudi-Arabian-Grand-Prix_Race_race_control_message.csv">R:
 Race Control Message CSV</a></p>
-<h2 data-number="1.14" id="rd01-bahrain-grand-prix"><span
-class="header-section-number">1.14</span> Rd01 Bahrain Grand Prix</h2>
+<h2 data-number="1.15" id="rd01-bahrain-grand-prix"><span
+class="header-section-number">1.15</span> Rd01 Bahrain Grand Prix</h2>
 <p><a
 href="./2023/2023_Rd01_Bahrain-Grand-Prix_Practice-1.pdf">FP1:Plots
 PDF</a><br />
@@ -715,8 +729,8 @@ Laptime CSV</a></p>
 gaptime PDF</a><br />
 <a href="./2023/2023_Rd01_Bahrain-Grand-Prix_Race_gaptime.csv">R:
 gaptime CSV</a></p>
-<h2 data-number="1.15" id="pre-season-test-week1"><span
-class="header-section-number">1.15</span> Pre-Season Test Week1</h2>
+<h2 data-number="1.16" id="pre-season-test-week1"><span
+class="header-section-number">1.16</span> Pre-Season Test Week1</h2>
 <p><a href="./2023/2023_Rd00_Pre-Season-Testing_Practice-1.pdf">Day1
 PDF</a><br />
 <a
