Add 2023 Rd16 Japanese GP FP2

--- a/index.html
+++ b/index.html
@@ -130,6 +130,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd16-Japanese-Grand-Prix-Practice-1_laptime.csv">FP1:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd16-Japanese-Grand-Prix-Practice-2.pdf">FP2:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd16-Japanese-Grand-Prix-Practice-2_rcm.csv">FP2:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd16-Japanese-Grand-Prix-Practice-2_laptime.csv">FP2:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd15-singapore-grand-prix"><span
 class="header-section-number">1.2</span> Rd15 Singapore Grand Prix</h2>
 <p><a
